--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600&display=swap');
 
-*/RESET CSS*/ html {
-    font-size: 0;
-}
+*/RESET CSS*/ 
 
-a {
-    text-decoration: none;
+html,body{
+    overflow-x: hidden !important;
+    color: #fff;
 }
 
 * {
@@ -67,6 +66,7 @@ header{
     align-items: center;
     justify-content: space-around;
     padding: 15px 0 0 0;
+   
 }
 
 nav.nav-links{
@@ -88,6 +88,7 @@ nav ul li a {
     color: #fff;
     font-family: 'Raleway', sans-serif;
     font-size: 20px;
+    text-decoration: none;
 }       
 
 
@@ -145,6 +146,7 @@ img {
     font-family: 'Quicksand', sans-serif;
     color: #fff;
     font-size: 20px;
+    text-decoration: none;
 }
 
 .btnSocial::before {
@@ -235,3 +237,4 @@ img {
     font-family: 'Quicksand', sans-serif;
     margin: 10px 5px;
 }
+
